sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/NameCardUserSetting__c.object-meta.xml
<CustomObject>
    <label>名刺ユーザ設定</label>
    <nameField>
        <displayFormat>NUS-{00000}</displayFormat>
        <label>名刺ユーザ設定No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>