sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcConfirmTransform__c.field-meta.xml
<CustomField>
    <fullName>SvcConfirmTransform__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:画像補正の結果を確認する</label>
    <type>Checkbox</type>
</CustomField>