sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcDoubleSide__c.field-meta.xml
<CustomField>
    <fullName>SvcDoubleSide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:裏面も撮る</label>
    <type>Checkbox</type>
</CustomField>