sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcGabageFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcGabageFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:陰影除去後、さらにゴミを取る</label>
    <type>Checkbox</type>
</CustomField>