sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>SvcGeoLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:位置情報を送信履歴に残す(廃止)</label>
    <type>Checkbox</type>
</CustomField>