sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcImageTransform__c.field-meta.xml
<CustomField>
    <fullName>SvcImageTransform__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:画像補正する</label>
    <type>Checkbox</type>
</CustomField>