sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcKeepListName__c.field-meta.xml
<CustomField>
    <fullName>SvcKeepListName__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:名刺リスト名を覚えておく</label>
    <type>Checkbox</type>
</CustomField>