sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcNoiseFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcNoiseFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:陰影除去後のゴミを取る</label>
    <type>Checkbox</type>
</CustomField>