sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcRepeatExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>SvcRepeatExchangeDate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SmartViscaカメラ:名刺交換日を引き継ぐ</label>
    <type>Checkbox</type>
</CustomField>