sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvcShadeFilter__c.field-meta.xml
<CustomField>
    <fullName>SvcShadeFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartViscaカメラ:陰影を除去する</label>
    <type>Checkbox</type>
</CustomField>