sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/SvLatestListView__c.field-meta.xml
<CustomField>
    <fullName>SvLatestListView__c</fullName>
    <defaultValue>1</defaultValue>
    <description>1:あなたの名刺 
2:会社の名刺 
その他:あなたの名刺</description>
    <label>SmartVisca:最後に開いたリスト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>