sfdx-source/SmartVisca/main/default/objects/NameCardUserSetting__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SmartViscaUserSetting</relationshipName>
    <type>Lookup</type>
</CustomField>